[gd_scene load_steps=23 format=4 uid="uid://der0xgsc04tw8"]

[ext_resource type="Script" path="res://SceneManager.gd" id="1_ydrv6"]
[ext_resource type="PackedScene" uid="uid://b1o2rlm0wd2al" path="res://Player.tscn" id="2_sxy8b"]
[ext_resource type="PackedScene" uid="uid://d1p7qrby5j45c" path="res://parallaxbg.tscn" id="3_5sfn8"]
[ext_resource type="Texture2D" uid="uid://dvgf3xqawnaja" path="res://asset/tileset/Tiles.png" id="4_t4o4f"]
[ext_resource type="Texture2D" uid="uid://cyq7qty70kkyw" path="res://asset/portal/free_crystal_dark_frakassets/crystal_dark_32x32_12f_20d.png" id="5_kiqil"]
[ext_resource type="AudioStream" uid="uid://dbbn4i8ns1dm" path="res://asset/BGM/Virtual Riot - Energy Drink (FREE DOWNLOAD) (1).mp3" id="6_387hf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7po4n"]
texture = ExtResource("4_t4o4f")
0:0/0 = 0
1:0/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
0:8/0 = 0
0:9/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:6/0 = 0
1:7/0 = 0
1:8/0 = 0
1:9/0 = 0
2:0/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:6/0 = 0
2:7/0 = 0
2:8/0 = 0
2:9/0 = 0
3:0/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:6/0 = 0
3:7/0 = 0
3:8/0 = 0
3:9/0 = 0
4:0/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:6/0 = 0
4:7/0 = 0
4:8/0 = 0
4:9/0 = 0
5:0/0 = 0
5:1/0 = 0
5:2/0 = 0
5:3/0 = 0
5:4/0 = 0
5:5/0 = 0
5:6/0 = 0
5:7/0 = 0
5:8/0 = 0
5:9/0 = 0
6:0/0 = 0
6:1/0 = 0
6:2/0 = 0
6:3/0 = 0
6:4/0 = 0
6:5/0 = 0
6:6/0 = 0
6:7/0 = 0
6:8/0 = 0
6:9/0 = 0
7:0/0 = 0
7:1/0 = 0
7:2/0 = 0
7:3/0 = 0
7:4/0 = 0
7:5/0 = 0
7:6/0 = 0
7:7/0 = 0
7:8/0 = 0
7:9/0 = 0
8:0/0 = 0
8:1/0 = 0
8:2/0 = 0
8:3/0 = 0
8:4/0 = 0
8:5/0 = 0
8:6/0 = 0
8:7/0 = 0
8:8/0 = 0
8:9/0 = 0
9:0/0 = 0
9:1/0 = 0
9:2/0 = 0
9:3/0 = 0
9:4/0 = 0
9:5/0 = 0
9:6/0 = 0
9:7/0 = 0
9:8/0 = 0
9:9/0 = 0
10:0/0 = 0
10:1/0 = 0
10:2/0 = 0
10:3/0 = 0
10:4/0 = 0
10:5/0 = 0
10:6/0 = 0
10:7/0 = 0
10:8/0 = 0
10:9/0 = 0
11:0/0 = 0
11:1/0 = 0
11:2/0 = 0
11:3/0 = 0
11:4/0 = 0
11:5/0 = 0
11:6/0 = 0
11:7/0 = 0
11:8/0 = 0
11:9/0 = 0
12:0/0 = 0
12:1/0 = 0
12:2/0 = 0
12:3/0 = 0
13:0/0 = 0
13:1/0 = 0
13:2/0 = 0
13:3/0 = 0
14:0/0 = 0
14:1/0 = 0
14:2/0 = 0
14:3/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
17:1/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
24:2/0 = 0
22:0/0 = 0
21:0/0 = 0
20:0/0 = 0
19:0/0 = 0
12:4/0 = 0
12:5/0 = 0
0:10/0 = 0
0:11/0 = 0
0:12/0 = 0
0:13/0 = 0
1:10/0 = 0
1:11/0 = 0
1:12/0 = 0
1:13/0 = 0
2:10/0 = 0
2:11/0 = 0
2:12/0 = 0
2:13/0 = 0
3:10/0 = 0
3:11/0 = 0
3:12/0 = 0
3:13/0 = 0
4:10/0 = 0
4:11/0 = 0
4:12/0 = 0
4:13/0 = 0
5:10/0 = 0
5:11/0 = 0
5:12/0 = 0
5:13/0 = 0
6:10/0 = 0
6:11/0 = 0
6:12/0 = 0
6:13/0 = 0
7:10/0 = 0
7:11/0 = 0
7:12/0 = 0
7:13/0 = 0
8:10/0 = 0
8:11/0 = 0
8:12/0 = 0
8:13/0 = 0
9:10/0 = 0
9:11/0 = 0
9:12/0 = 0
9:13/0 = 0
10:10/0 = 0
10:11/0 = 0
10:12/0 = 0
10:13/0 = 0
11:10/0 = 0
11:11/0 = 0
11:12/0 = 0
11:13/0 = 0
12:10/0 = 0
12:11/0 = 0
12:12/0 = 0
12:13/0 = 0
13:10/0 = 0
13:11/0 = 0
14:10/0 = 0
14:11/0 = 0
12:6/0 = 0
12:7/0 = 0
12:8/0 = 0
13:6/0 = 0
13:7/0 = 0
13:8/0 = 0
0:14/0 = 0
0:15/0 = 0
0:16/0 = 0
0:17/0 = 0
1:14/0 = 0
1:15/0 = 0
1:16/0 = 0
1:17/0 = 0
2:14/0 = 0
2:15/0 = 0
2:16/0 = 0
2:17/0 = 0
4:14/0 = 0
4:15/0 = 0
4:16/0 = 0
5:14/0 = 0
5:15/0 = 0
5:16/0 = 0
6:14/0 = 0
6:15/0 = 0
6:16/0 = 0
7:14/0 = 0
7:15/0 = 0
7:16/0 = 0
8:14/0 = 0
8:15/0 = 0
8:16/0 = 0
9:14/0 = 0
9:15/0 = 0
9:16/0 = 0
10:14/0 = 0
10:15/0 = 0
10:16/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0

[sub_resource type="TileSet" id="TileSet_iea55"]
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.369372, 0.723342, 0.391509, 1)
sources/3 = SubResource("TileSetAtlasSource_7po4n")

[sub_resource type="AtlasTexture" id="AtlasTexture_oqlyc"]
atlas = ExtResource("5_kiqil")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1da4"]
atlas = ExtResource("5_kiqil")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf4jx"]
atlas = ExtResource("5_kiqil")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi2ch"]
atlas = ExtResource("5_kiqil")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yye4w"]
atlas = ExtResource("5_kiqil")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouech"]
atlas = ExtResource("5_kiqil")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4rci"]
atlas = ExtResource("5_kiqil")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2qo0"]
atlas = ExtResource("5_kiqil")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmkib"]
atlas = ExtResource("5_kiqil")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phspy"]
atlas = ExtResource("5_kiqil")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s47em"]
atlas = ExtResource("5_kiqil")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtbfb"]
atlas = ExtResource("5_kiqil")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1w82t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqlyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1da4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf4jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi2ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yye4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouech")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4rci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2qo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmkib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phspy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s47em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtbfb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvq8y"]
size = Vector2(10, 17)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ydrv6")
PlayerScene = ExtResource("2_sxy8b")
bg = ExtResource("3_5sfn8")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player.tscn")
spawn_path = NodePath("../SpawnPoint")
spawn_limit = 5

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAIAAgABAAAAAAABAAIAAgABAAAAAAACAAIAAgABAAAAAAADAAIAAgABAAAAAAAEAAIAAgABAAAAAAACACMAAwAAAAIAAAACACQAAwABAAIAAAADACMAAwABAAIAAAADACQAAwACAAIAAAAEACMAAwABAAIAAAAEACQAAwADAAIAAAAFACMAAwACAAIAAAAFACQAAwABAAIAAAAGACMAAwABAAIAAAAGACQAAwACAAIAAAAHACMAAwACAAIAAAAHACQAAwADAAIAAAAFACEAAwACAAAAAAAFACIAAwACAAEAAAAGACEAAwABAAAAAAAGACIAAwABAAEAAAAHACEAAwACAAAAAAAHACIAAwACAAEAAAAIACEAAwABAAAAAAAIACIAAwABAAEAAAAJACEAAwACAAAAAAAJACIAAwACAAEAAAAKACEAAwABAAAAAAAKACIAAwABAAEAAAAIACMAAwABAAIAAAAIACQAAwABAAIAAAAJACMAAwACAAIAAAAJACQAAwACAAIAAAAKACMAAwABAAIAAAAKACQAAwADAAIAAAALACMAAwACAAIAAAALACQAAwABAAIAAAAMACMAAwABAAIAAAAMACQAAwACAAIAAAANACMAAwACAAIAAAANACQAAwADAAIAAAAOACMAAwABAAAAAAAOACQAAwABAAIAAAAPACMAAwACAAAAAAAPACQAAwACAAIAAAAQACMAAwADAAAAAAAQACQAAwADAAIAAAARACMAAwABAAAAAAARACQAAwABAAIAAAASACMAAwACAAAAAAASACQAAwACAAIAAAATACMAAwADAAAAAAATACQAAwADAAIAAAAUACMAAwABAAAAAAAUACQAAwABAAIAAAAVACMAAwACAAAAAAAVACQAAwACAAIAAAAWACMAAwADAAAAAAAWACQAAwADAAIAAAAXACMAAwABAAAAAAAXACQAAwABAAIAAAAYACMAAwACAAAAAAAYACQAAwACAAIAAAAZACMAAwADAAAAAAAZACQAAwADAAIAAAAaACMAAwABAAAAAAAaACQAAwABAAIAAAAbACMAAwACAAAAAAAbACQAAwACAAIAAAAcACMAAwADAAAAAAAcACQAAwADAAIAAAAdACMAAwABAAAAAAAdACQAAwABAAIAAAAeACMAAwACAAAAAAAeACQAAwACAAIAAAAfACMAAwADAAAAAAAfACQAAwADAAIAAAAgACMAAwABAAAAAAAgACQAAwABAAIAAAAhACMAAwACAAAAAAAhACQAAwACAAIAAAAiACMAAwADAAAAAAAiACQAAwADAAIAAAAjACMAAwABAAAAAAAjACQAAwABAAIAAAAkACMAAwACAAAAAAAkACQAAwACAAIAAAAlACMAAwADAAAAAAAlACQAAwADAAIAAAAmACMAAwABAAAAAAAmACQAAwABAAIAAAAnACMAAwACAAAAAAAnACQAAwACAAIAAAAoACMAAwABAAMAAAAoACQAAwABAAIAAAAWACAAAwACAAAAAAAWACEAAwACAAEAAAAXACAAAwADAAAAAAAXACEAAwADAAEAAAAYACAAAwABAAAAAAAYACEAAwABAAEAAAAZACAAAwACAAAAAAAZACEAAwACAAEAAAAaACAAAwADAAAAAAAaACEAAwADAAEAAAAbACAAAwABAAAAAAAbACEAAwABAAEAAAAcACAAAwACAAAAAAAcACEAAwACAAEAAAAdACAAAwADAAAAAAAdACEAAwADAAEAAAAeACAAAwABAAAAAAAeACEAAwABAAEAAAAfACAAAwACAAAAAAAfACEAAwACAAEAAAAgACAAAwADAAAAAAAgACEAAwADAAEAAAALACIAAwACAAEAAAAMACIAAwABAAEAAAACACIAAwAAAAEAAAADACIAAwABAAEAAAAEACIAAwABAAEAAAD//yYAAwABAAIAAAD//ycAAwABAAMAAAAAACYAAwACAAIAAAAAACcAAwACAAMAAAABACYAAwADAAIAAAABACcAAwADAAMAAAD//yQAAwABAAIAAAD//yUAAwABAAMAAAAAACQAAwACAAIAAAAAACUAAwACAAMAAAABACQAAwADAAIAAAABACUAAwADAAMAAAD//yIAAwABAAIAAAD//yMAAwABAAMAAAAAACIAAwACAAIAAAAAACMAAwACAAMAAAABACIAAwADAAIAAAABACMAAwADAAMAAAD//yAAAwABAAIAAAD//yEAAwABAAMAAAAAACAAAwACAAIAAAAAACEAAwACAAMAAAABACAAAwADAAIAAAABACEAAwADAAMAAAD//x4AAwABAAIAAAD//x8AAwABAAMAAAAAAB4AAwACAAIAAAAAAB8AAwACAAMAAAABAB4AAwADAAIAAAABAB8AAwADAAMAAAD//xwAAwABAAIAAAD//x0AAwABAAMAAAAAABwAAwACAAIAAAAAAB0AAwACAAMAAAABABwAAwADAAIAAAABAB0AAwADAAMAAAD//xoAAwABAAIAAAD//xsAAwABAAMAAAAAABoAAwACAAIAAAAAABsAAwACAAMAAAABABoAAwADAAIAAAABABsAAwADAAMAAAD//xgAAwABAAIAAAD//xkAAwABAAMAAAAAABgAAwACAAIAAAAAABkAAwACAAMAAAABABgAAwADAAIAAAABABkAAwADAAMAAAD//xYAAwABAAIAAAD//xcAAwABAAMAAAAAABYAAwACAAIAAAAAABcAAwACAAMAAAABABYAAwADAAIAAAABABcAAwADAAMAAAD//xQAAwABAAIAAAD//xUAAwABAAMAAAAAABQAAwACAAIAAAAAABUAAwACAAMAAAABABQAAwADAAIAAAABABUAAwADAAMAAAD//xIAAwABAAIAAAD//xMAAwABAAMAAAAAABIAAwACAAIAAAAAABMAAwACAAMAAAABABIAAwADAAIAAAABABMAAwADAAMAAAD//xAAAwABAAIAAAD//xEAAwABAAMAAAAAABAAAwACAAIAAAAAABEAAwACAAMAAAABABAAAwADAAIAAAABABEAAwADAAMAAAD//w4AAwABAAIAAAD//w8AAwABAAMAAAAAAA4AAwACAAIAAAAAAA8AAwACAAMAAAABAA4AAwADAAIAAAABAA8AAwADAAMAAAD//wwAAwABAAIAAAD//w0AAwABAAMAAAAAAAwAAwABAAIAAAAAAA0AAwABAAMAAAABAAwAAwACAAIAAAABAA0AAwACAAMAAAD8/w4AAwABAAIAAAD8/w8AAwABAAMAAAD9/w4AAwACAAIAAAD9/w8AAwACAAMAAAD+/w4AAwADAAIAAAD+/w8AAwADAAMAAAD8/xAAAwABAAIAAAD8/xEAAwABAAMAAAD9/xAAAwACAAIAAAD9/xEAAwACAAMAAAD+/xAAAwADAAIAAAD+/xEAAwADAAMAAAD8/xoAAwABAAIAAAD8/xsAAwABAAMAAAD9/xoAAwACAAIAAAD9/xsAAwACAAMAAAD+/xoAAwADAAIAAAD+/xsAAwADAAMAAAD8/xgAAwABAAIAAAD8/xkAAwABAAMAAAD9/xgAAwACAAIAAAD9/xkAAwACAAMAAAD+/xgAAwADAAIAAAD+/xkAAwADAAMAAAD8/xYAAwABAAIAAAD8/xcAAwABAAMAAAD9/xYAAwACAAIAAAD9/xcAAwACAAMAAAD+/xYAAwADAAIAAAD+/xcAAwADAAMAAAD8/xQAAwABAAIAAAD8/xUAAwABAAMAAAD9/xQAAwACAAIAAAD9/xUAAwACAAMAAAD+/xQAAwADAAIAAAD+/xUAAwADAAMAAAD8/xIAAwABAAIAAAD8/xMAAwABAAMAAAD9/xIAAwACAAIAAAD9/xMAAwACAAMAAAD+/xIAAwADAAIAAAD+/xMAAwADAAMAAAD8/xwAAwABAAIAAAD8/x0AAwABAAMAAAD9/xwAAwACAAIAAAD9/x0AAwACAAMAAAD+/xwAAwADAAIAAAD+/x0AAwADAAMAAAD8/x4AAwABAAIAAAD8/x8AAwABAAMAAAD9/x4AAwACAAIAAAD9/x8AAwACAAMAAAD+/x4AAwADAAIAAAD+/x8AAwADAAMAAAD8/yAAAwABAAIAAAD8/yEAAwABAAMAAAD9/yAAAwACAAIAAAD9/yEAAwACAAMAAAD+/yAAAwADAAIAAAD+/yEAAwADAAMAAAD8/yIAAwABAAIAAAD8/yMAAwABAAMAAAD9/yIAAwACAAIAAAD9/yMAAwACAAMAAAD+/yIAAwADAAIAAAD+/yMAAwADAAMAAAD8/yQAAwABAAIAAAD8/yUAAwABAAMAAAD9/yQAAwACAAIAAAD9/yUAAwACAAMAAAD+/yQAAwADAAIAAAD+/yUAAwADAAMAAAD8/yYAAwABAAIAAAD8/ycAAwABAAMAAAD9/yYAAwACAAIAAAD9/ycAAwACAAMAAAD+/yYAAwADAAIAAAD+/ycAAwADAAMAAAD8/ygAAwABAAIAAAD8/ykAAwABAAMAAAD9/ygAAwACAAIAAAD9/ykAAwACAAMAAAD+/ygAAwADAAIAAAD+/ykAAwADAAMAAAACACYAAwABAAIAAAACACcAAwABAAMAAAADACYAAwACAAIAAAADACcAAwACAAMAAAAEACYAAwADAAIAAAAEACcAAwADAAMAAAAFACYAAwABAAIAAAAFACcAAwABAAMAAAAGACYAAwACAAIAAAAGACcAAwACAAMAAAAHACYAAwADAAIAAAAHACcAAwADAAMAAAAIACYAAwABAAIAAAAIACcAAwABAAMAAAAJACYAAwACAAIAAAAJACcAAwACAAMAAAAKACYAAwADAAIAAAAKACcAAwADAAMAAAALACYAAwABAAIAAAALACcAAwABAAMAAAAMACYAAwACAAIAAAAMACcAAwACAAMAAAANACYAAwADAAIAAAANACcAAwADAAMAAAAOACYAAwABAAIAAAAOACcAAwABAAMAAAAPACYAAwACAAIAAAAPACcAAwACAAMAAAAQACYAAwADAAIAAAAQACcAAwADAAMAAAARACYAAwABAAIAAAARACcAAwABAAMAAAASACYAAwACAAIAAAASACcAAwACAAMAAAATACYAAwADAAIAAAATACcAAwADAAMAAAAUACYAAwABAAIAAAAUACcAAwABAAMAAAAVACYAAwACAAIAAAAVACcAAwACAAMAAAAWACYAAwADAAIAAAAWACcAAwADAAMAAAAXACYAAwABAAIAAAAXACcAAwABAAMAAAAYACYAAwACAAIAAAAYACcAAwACAAMAAAAZACYAAwADAAIAAAAZACcAAwADAAMAAAAaACYAAwABAAIAAAAaACcAAwABAAMAAAAbACYAAwACAAIAAAAbACcAAwACAAMAAAAcACYAAwADAAIAAAAcACcAAwADAAMAAAAdACYAAwABAAIAAAAdACcAAwABAAMAAAAeACYAAwACAAIAAAAeACcAAwACAAMAAAAfACYAAwADAAIAAAAfACcAAwADAAMAAAAdACUAAwABAAMAAAAeACUAAwACAAMAAAAfACUAAwADAAMAAAAaACUAAwABAAMAAAAbACUAAwACAAMAAAAcACUAAwADAAMAAAAXACUAAwABAAMAAAAYACUAAwACAAMAAAAZACUAAwADAAMAAAAUACUAAwABAAMAAAAVACUAAwACAAMAAAAWACUAAwADAAMAAAARACUAAwABAAMAAAASACUAAwACAAMAAAATACUAAwADAAMAAAAOACUAAwABAAMAAAAPACUAAwACAAMAAAAQACUAAwADAAMAAAALACUAAwABAAMAAAAMACUAAwACAAMAAAANACUAAwADAAMAAAAIACUAAwABAAMAAAAJACUAAwACAAMAAAAKACUAAwADAAMAAAAFACUAAwABAAMAAAAGACUAAwACAAMAAAAHACUAAwADAAMAAAACACUAAwABAAMAAAADACUAAwACAAMAAAAEACUAAwADAAMAAAAgACUAAwABAAMAAAAhACUAAwACAAMAAAAiACUAAwADAAMAAAAjACUAAwABAAMAAAAkACUAAwACAAMAAAAlACUAAwADAAMAAAAmACUAAwABAAMAAAAnACUAAwACAAMAAAAoACUAAwABAAMAAAAmACYAAwABAAIAAAAmACcAAwABAAMAAAAnACYAAwACAAIAAAAnACcAAwACAAMAAAAoACYAAwABAAIAAAAoACcAAwABAAMAAAAjACYAAwABAAIAAAAjACcAAwABAAMAAAAkACYAAwACAAIAAAAkACcAAwACAAMAAAAlACYAAwADAAIAAAAlACcAAwADAAMAAAAgACYAAwABAAIAAAAgACcAAwABAAMAAAAhACYAAwACAAIAAAAhACcAAwACAAMAAAAiACYAAwADAAIAAAAiACcAAwADAAMAAAApACQAAwACAAIAAAApACUAAwACAAMAAAAqACQAAwABAAEAAAAqACUAAwABAAIAAAArACQAAwACAAEAAAArACUAAwACAAIAAAAsACQAAwADAAEAAAAsACUAAwADAAIAAAAtACQAAwABAAEAAAAtACUAAwABAAIAAAArACYAAwABAAIAAAArACcAAwABAAMAAAAsACYAAwACAAIAAAAsACcAAwACAAMAAAAtACYAAwADAAIAAAAtACcAAwADAAMAAAApACYAAwACAAIAAAApACcAAwACAAMAAAAqACYAAwADAAIAAAAqACcAAwADAAMAAAAuACYAAwABAAIAAAAuACcAAwABAAMAAAAvACYAAwACAAIAAAAvACcAAwACAAMAAAAwACYAAwADAAIAAAAwACcAAwADAAMAAAAxACYAAwABAAIAAAAxACcAAwABAAMAAAAyACYAAwACAAIAAAAyACcAAwACAAMAAAAzACYAAwADAAIAAAAzACcAAwADAAMAAAA0ACYAAwABAAIAAAA0ACcAAwABAAMAAAA1ACYAAwACAAIAAAA1ACcAAwACAAMAAAA2ACYAAwADAAIAAAA2ACcAAwADAAMAAAA3ACYAAwABAAIAAAA3ACcAAwABAAMAAAA4ACYAAwACAAIAAAA4ACcAAwACAAMAAAA5ACYAAwADAAIAAAA5ACcAAwADAAMAAAA6ACYAAwABAAIAAAA6ACcAAwABAAMAAAA7ACYAAwACAAIAAAA7ACcAAwACAAMAAAA8ACYAAwADAAIAAAA8ACcAAwADAAMAAAA9ACYAAwABAAIAAAA9ACcAAwABAAMAAAA+ACYAAwACAAIAAAA+ACcAAwACAAMAAAA/ACYAAwADAAIAAAA/ACcAAwADAAMAAABAACYAAwABAAIAAABAACcAAwABAAMAAABBACYAAwACAAIAAABBACcAAwACAAMAAABCACYAAwADAAIAAABCACcAAwADAAMAAAAuACQAAwACAAEAAAAuACUAAwACAAIAAAAvACQAAwADAAEAAAAvACUAAwADAAIAAAAwACQAAwABAAEAAAAwACUAAwABAAIAAAAxACQAAwACAAEAAAAxACUAAwACAAIAAAAyACQAAwADAAEAAAAyACUAAwADAAIAAAAzACQAAwABAAEAAAAzACUAAwABAAIAAAA0ACQAAwACAAEAAAA0ACUAAwACAAIAAAA1ACQAAwADAAEAAAA1ACUAAwADAAIAAAA2ACQAAwABAAEAAAA2ACUAAwABAAIAAAA3ACQAAwACAAEAAAA3ACUAAwACAAIAAAA4ACQAAwADAAEAAAA4ACUAAwADAAIAAAA5ACQAAwABAAEAAAA5ACUAAwABAAIAAAA6ACQAAwACAAEAAAA6ACUAAwACAAIAAAA7ACQAAwADAAEAAAA7ACUAAwADAAIAAAA8ACQAAwABAAEAAAA8ACUAAwABAAIAAAA9ACQAAwACAAEAAAA9ACUAAwACAAIAAAA+ACQAAwADAAEAAAA+ACUAAwADAAIAAAA/ACQAAwABAAEAAAA/ACUAAwABAAIAAABAACQAAwACAAEAAABAACUAAwACAAIAAABBACQAAwADAAEAAABBACUAAwADAAIAAAAoACIAAwABAAIAAAApACIAAwACAAIAAAApACMAAwACAAMAAAAoACAAAwABAAIAAAAoACEAAwABAAMAAAApACAAAwACAAIAAAApACEAAwACAAMAAAAoAB4AAwABAAIAAAAoAB8AAwABAAMAAAApAB4AAwACAAIAAAApAB8AAwACAAMAAAAoABwAAwABAAIAAAAoAB0AAwABAAMAAAApABwAAwACAAIAAAApAB0AAwACAAMAAAAoABoAAwABAAIAAAAoABsAAwABAAMAAAApABoAAwACAAIAAAApABsAAwACAAMAAAAoABgAAwABAAIAAAAoABkAAwABAAMAAAApABgAAwACAAIAAAApABkAAwACAAMAAAAoABYAAwABAAIAAAAoABcAAwABAAMAAAApABYAAwACAAIAAAApABcAAwACAAMAAAAoABQAAwABAAIAAAAoABUAAwABAAMAAAApABQAAwACAAIAAAApABUAAwACAAMAAAAoABIAAwABAAIAAAAoABMAAwABAAMAAAApABIAAwACAAIAAAApABMAAwACAAMAAAAoABAAAwABAAIAAAAoABEAAwABAAMAAAApABAAAwACAAIAAAApABEAAwACAAMAAAAoAA4AAwABAAIAAAAoAA8AAwABAAMAAAApAA4AAwACAAIAAAApAA8AAwACAAMAAAAoAAwAAwABAAIAAAAoAA0AAwABAAMAAAApAAwAAwACAAIAAAApAA0AAwACAAMAAAAmAAwAAwABAAIAAAAmAA0AAwABAAMAAAAnAAwAAwACAAIAAAAnAA0AAwACAAMAAAAkAAwAAwABAAIAAAAkAA0AAwABAAMAAAAlAAwAAwACAAIAAAAlAA0AAwACAAMAAAAiAAwAAwABAAIAAAAiAA0AAwABAAMAAAAjAAwAAwACAAIAAAAjAA0AAwACAAMAAAAgAAwAAwABAAIAAAAgAA0AAwABAAMAAAAhAAwAAwACAAIAAAAhAA0AAwACAAMAAAAeAAwAAwABAAIAAAAeAA0AAwABAAMAAAAfAAwAAwACAAIAAAAfAA0AAwACAAMAAAAcAAwAAwABAAIAAAAcAA0AAwABAAMAAAAdAAwAAwACAAIAAAAdAA0AAwACAAMAAAAaAAwAAwABAAIAAAAaAA0AAwABAAMAAAAbAAwAAwACAAIAAAAbAA0AAwACAAMAAAAYAAwAAwABAAIAAAAYAA0AAwABAAMAAAAZAAwAAwACAAIAAAAZAA0AAwACAAMAAAAWAAwAAwABAAIAAAAWAA0AAwABAAMAAAAXAAwAAwACAAIAAAAXAA0AAwACAAMAAAAUAAwAAwABAAIAAAAUAA0AAwABAAMAAAAVAAwAAwACAAIAAAAVAA0AAwACAAMAAAASAAwAAwABAAIAAAASAA0AAwABAAMAAAATAAwAAwACAAIAAAATAA0AAwACAAMAAAAQAAwAAwABAAIAAAAQAA0AAwABAAMAAAARAAwAAwACAAIAAAARAA0AAwACAAMAAAAOAAwAAwABAAIAAAAOAA0AAwABAAMAAAAPAAwAAwACAAIAAAAPAA0AAwACAAMAAAAMAAwAAwABAAIAAAAMAA0AAwABAAMAAAANAAwAAwACAAIAAAANAA0AAwACAAMAAAAKAAwAAwABAAIAAAAKAA0AAwABAAMAAAALAAwAAwACAAIAAAALAA0AAwACAAMAAAAIAAwAAwABAAIAAAAIAA0AAwABAAMAAAAJAAwAAwACAAIAAAAJAA0AAwACAAMAAAAGAAwAAwABAAIAAAAGAA0AAwABAAMAAAAHAAwAAwACAAIAAAAHAA0AAwACAAMAAAAEAAwAAwABAAIAAAAEAA0AAwABAAMAAAAFAAwAAwACAAIAAAAFAA0AAwACAAMAAAAEAAoAAwABAAIAAAAEAAsAAwABAAMAAAAFAAoAAwACAAIAAAAFAAsAAwACAAMAAAACAAoAAwABAAIAAAACAAsAAwABAAMAAAADAAoAAwACAAIAAAADAAsAAwACAAMAAAAAAAoAAwABAAIAAAAAAAsAAwABAAMAAAABAAoAAwACAAIAAAABAAsAAwACAAMAAAACAAwAAwABAAIAAAACAA0AAwABAAMAAAADAAwAAwACAAIAAAADAA0AAwACAAMAAAACACEAAwAAAAAAAAADACEAAwABAAAAAAAEACEAAwABAAAAAAALACEAAwACAAAAAAAMACEAAwABAAAAAAANACEAAwACAAAAAAANACIAAwACAAEAAAAqACMAAwABAAAAAAArACMAAwACAAAAAAAsACMAAwADAAAAAAAtACMAAwABAAAAAAAuACMAAwACAAAAAAAvACMAAwADAAAAAAAwACMAAwABAAAAAAAxACMAAwACAAAAAAAyACMAAwADAAAAAAAzACMAAwABAAAAAAA0ACMAAwACAAAAAAA1ACMAAwADAAAAAAA2ACMAAwABAAAAAAA3ACMAAwACAAAAAAA4ACMAAwADAAAAAAA5ACMAAwABAAAAAAA6ACMAAwACAAAAAAA7ACMAAwADAAAAAAA8ACMAAwABAAAAAAA9ACMAAwACAAAAAAA+ACMAAwADAAAAAAA/ACMAAwABAAAAAABAACMAAwACAAAAAABBACMAAwADAAAAAABCACMAAwABAAAAAABCACQAAwABAAEAAABCACUAAwABAAIAAABDACMAAwACAAAAAABDACQAAwACAAEAAABDACUAAwACAAIAAABEACMAAwADAAAAAABEACQAAwADAAEAAABEACUAAwADAAIAAABFACIAAwAKAAYAAABFACMAAwAKAAcAAABFACQAAwAKAAgAAABFACUAAwAKAAkAAABFAB4AAwAKAAgAAABFAB8AAwAKAAkAAABFACAAAwAKAAQAAABFACEAAwAKAAUAAABFABoAAwAKAAQAAABFABsAAwAKAAUAAABFABwAAwAKAAYAAABFAB0AAwAKAAcAAABFABYAAwAKAAYAAABFABcAAwAKAAcAAABFABgAAwAKAAgAAABFABkAAwAKAAkAAABFABIAAwAKAAgAAABFABMAAwAKAAkAAABFABQAAwAKAAQAAABFABUAAwAKAAUAAABGACAAAwALAAQAAABGACEAAwALAAUAAABGACIAAwALAAYAAABGACMAAwALAAcAAABGACQAAwALAAgAAABGACUAAwALAAkAAABGABoAAwALAAQAAABGABsAAwALAAUAAABGABwAAwALAAYAAABGAB0AAwALAAcAAABGAB4AAwALAAgAAABGAB8AAwALAAkAAABGABQAAwALAAQAAABGABUAAwALAAUAAABGABYAAwALAAYAAABGABcAAwALAAcAAABGABgAAwALAAgAAABGABkAAwALAAkAAABFAA4AAwAKAAIAAABFAA8AAwAKAAAAAABFABAAAwAKAAEAAABFABEAAwAKAAcAAABGAA4AAwALAAEAAABGAA8AAwALAAIAAABGABAAAwALAAMAAABGABEAAwALAAcAAABGABIAAwALAAgAAABGABMAAwALAAkAAABEAA0AAwAUAAIAAABEAA4AAwATAAIAAABEAA8AAwAJAAAAAABEABAAAwAJAAEAAABFAA0AAwAUAAEAAABGAA0AAwALAAAAAABEAAsAAwAUAAIAAABEAAwAAwATAAIAAABFAAsAAwAUAAEAAABFAAwAAwAUAAIAAABEAAkAAwATAAEAAABEAAoAAwATAAIAAABFAAkAAwAUAAEAAABFAAoAAwAUAAIAAABCAAsAAwASAAEAAABCAAwAAwASAAIAAABDAAsAAwAUAAEAAABDAAwAAwAUAAIAAABCAA0AAwAUAAIAAABCAA4AAwATAAIAAABDAA0AAwAUAAIAAABDAA4AAwAUAAIAAABGAAsAAwAUAAIAAABGAAwAAwATAAIAAABHAAsAAwAUAAEAAABHAAwAAwAUAAIAAABGAAkAAwATAAEAAABGAAoAAwATAAIAAABHAAkAAwAUAAEAAABHAAoAAwAUAAIAAABIAAwAAwAVAAIAAABIAAsAAwAVAAEAAABIAAoAAwAVAAEAAABJAAoAAwAWAAEAAABJAAsAAwAWAAEAAABJAAwAAwAWAAIAAABIAAcAAwAVAAAAAABIAAgAAwAVAAEAAABIAAkAAwAVAAAAAABJAAcAAwAWAAAAAABJAAgAAwAWAAEAAABJAAkAAwAWAAAAAABKAAsAAwAXAAEAAABKAAwAAwAXAAIAAABLAAsAAwAYAAEAAABLAAwAAwAYAAIAAABKAA0AAwAUAAIAAABLAA0AAwAVAAIAAABIAA0AAwAVAAIAAABJAA0AAwAVAAIAAABHAA0AAwAUAAIAAABBAAsAAwARAAEAAABBAAwAAwARAAIAAABBAA0AAwAUAAEAAAATACAAAwABAAAAAAATACEAAwABAAEAAAAUACAAAwACAAAAAAAUACEAAwACAAEAAAAVACAAAwADAAAAAAAVACEAAwADAAEAAAAQACAAAwABAAAAAAAQACEAAwABAAEAAAARACAAAwACAAAAAAARACEAAwACAAEAAAASACAAAwADAAAAAAASACEAAwADAAEAAAA=")
tile_set = SubResource("TileSet_iea55")

[node name="SpawnPoint" type="Node2D" parent="." groups=["spawnpoint"]]
position = Vector2(80, 506)

[node name="SpawnPoint 1-2" type="Node2D" parent="." groups=["spawnpoint"]]
position = Vector2(702, 546)

[node name="portal1-1" type="Node2D" parent="."]
position = Vector2(506, 501)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="portal1-1"]
sprite_frames = SubResource("SpriteFrames_1w82t")
frame = 2
frame_progress = 0.378251

[node name="Area2D" type="Area2D" parent="portal1-1" groups=["portal"]]
collision_layer = 129
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="portal1-1/Area2D"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_wvq8y")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_387hf")
autoplay = true
parameters/looping = true

[connection signal="body_entered" from="portal1-1/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="portal1-1/Area2D" to="." method="_on_area_2d_body_exited"]
